cmake_minimum_required(VERSION 3.10)
SET(CMAKE_C_COMPILER g++)
SET(CMAKE_CXX_COMPILTER g++)
add_compile_options(-std=c++11 -g)
project(httpserver)
set( CMAKE_CXX_FLAGS "-std=c++11" )
include_directories(${PROJECT_SOURCE_DIR}/include)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
add_subdirectory (${PROJECT_SOURCE_DIR}/lib)
add_executable(test_my ${PROJECT_SOURCE_DIR}/test/main.cpp)
target_link_libraries(test_my httpserver)
