cmake_minimum_required(VERSION 3.10)
SET(CMAKE_C_COMPILER g++)
SET(CMAKE_CXX_COMPILTER g++)
add_compile_options(-std=c++11 -g)
project(httpserver)
set( CMAKE_CXX_FLAGS "-std=c++11" )
include_directories(${PROJECT_SOURCE_DIR}/include)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
add_subdirectory (${PROJECT_SOURCE_DIR}/lib)
add_executable(test_rio ${PROJECT_SOURCE_DIR}/test/rio_test/rio_test.cpp)
add_executable(test_socket_server ${PROJECT_SOURCE_DIR}/test/socket_test/server_test.cpp)
add_executable(test_socket_client ${PROJECT_SOURCE_DIR}/test/socket_test/client_test.cpp)
target_link_libraries(test_rio httpserver)
target_link_libraries(test_socket_server httpserver)
target_link_libraries(test_socket_client httpserver)
